# makcu-cpp

./: CLAUDE.md  CMakeLists.txt  README.md  api-reference.html  build.bat  build.sh
.github/workflows/: auto-release.yml  ci.yml
examples/: CMakeLists.txt  README.md  basic_usage.cpp  baud_rate_test.cpp  build.bat  build.sh  c_api_test.c  demo.cpp
makcu-cpp/: main.cpp
makcu-cpp/include/: human_patterns.h  makcu.h  makcu_c.h  makcu_export.h  serialport.h
makcu-cpp/src/: human_patterns.cpp  makcu.cpp  makcu_c.cpp  serialport.cpp
